--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@
     background-color: beige;
 
 }
-
+/* 
 .cases {
     position:relative;
     padding-left: 100px;
-}
+} */
 
 .date {
     position:relative;
