--- a/style.css
+++ b/style.css
@@ -35,13 +35,15 @@
 
 .float-container {
     border: 3px solid #fff;
-    padding: 20px;
+    padding: 100px;
+	padding-top: 50px;
 }
 
 .float-child {
     width: 50%;
     float: left;
     padding: 5px;
+	padding-right: 150px;
 } 
 
 .title {
